--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -22,39 +22,37 @@
       </div>
 </div>
 <hr>
+<div class="card-group">
+  <div class="card">
+    <div class="ratio ratio-16x9">
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/iRkG54SqPSU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>          
+  </div>
+  
+  <div class="card">
+    <h4 class="text-center"> Movies.online es el sitio perfecto para Ver Peliculas y Series Online. Nuestro sitio para ver peliculas y series online gratis, se preocupa por tener lo último en peliculas y series en calidad full HD. 
+      <br>
+      <br>
+      Para ver películas y series online gratis completas, puedes acceder al menu en la seccion de categorias de la parte superior, al aguial es un app Open Source que permite editar, agregar y  eliminar peliculas.
+      <br>
+      Esta creada en base a Angular (FrontEnd) Laravel y MySQL(BackEnd)
+    </h4>
+  </div> 
+</div>
+<hr>
 <div class="shadow p-3 mb-5 bg-body rounded">
-    <div class="container">
-        <div class="row">
-            <div class="col">
-              <iframe width="560" height="315" src="https://www.youtube.com/embed/iRkG54SqPSU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </div>
-            <div class="col">
-                <h4>Movies.online es el sitio perfecto para Ver Peliculas y Series Online. Nuestro sitio para ver peliculas y series online gratis, se preocupa por tener lo último en peliculas y series en calidad full HD. 
-                <br>
-                <br>
-                Para ver películas y series online gratis completas, puedes acceder al menu en la seccion de categorias de la parte superior, al aguial es un app Open Source que permite editar, agregar y  eliminar peliculas.
-                <br>
-                Esta creada en base a Angular (FrontEnd) Laravel y MySQL(BackEnd)
-                </h4>
-            </div>
-        </div>
-    </div>
-    <hr>
-    <div class="shadow p-3 mb-5 bg-body rounded">
-        <div class="container">
-            <div class="row">
-                <div class="col">
-                    <h4 class="text-center">Te invitamos a participar en este Gran Proyecto, agregando, editanto y actualizando nuestro catalago. 
-                    </h4>
-                </div>
-            </div>
-
-    </div>
-    
-    <hr>
-    <div class="d-grid gap-2">
-        <button class="btn btn-primary" [routerLink]="'/movies'" type="button">VER CATALAGO COMPLETO</button>
-    </div>
+  <div class="container">
+      <div class="row">
+          <div class="col">
+              <h4 class="text-center">Te invitamos a participar en este Gran Proyecto, agregando, editanto y actualizando nuestro catalago. 
+              </h4>
+          </div>
+      </div>
+  </div>
+</div>
+<div class="d-grid gap-2">
+  <button class="btn btn-primary" [routerLink]="'/movies'" type="button">VER CATALAGO COMPLETO</button>
+</div>
     
     <hr>
     
