--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -25,7 +25,7 @@
 <div class="card-group">
   <div class="card">
     <div class="ratio ratio-16x9">
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/iRkG54SqPSU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <iframe width="560" height="315" src="https://youtu.be/rd9aBF0qb4o" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>          
   </div>
   
