--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,21 +1,24 @@
-<div class="container">
-    <div class="row">
-      <div class="col">
-        <img src="assets/img/udgvirtual.png" class="d-block w-50" alt="...">
-      </div>
-      <div class="col">
-        <h5> Licenciatura en Desarrollo de Sistemas Web </h5>
-        <h4> Materia: </h4>
-        <p>Conceptualización de Servicios en la Nube</p>
-        <h4> Asesor:</h4>
-        <p> Oscar Gregorio Silva Mares </p>
-      </div>
-      <div class="col">
-        <h4> Producto Integrador </h4>
-        <p>Aplicación web dinámica en un servicio de la nube </p>
-        <h4>Alumno:</h4>
-        <p> Julián Arnulfo Rojas Bernal </p>
-        <a href="mailto:julian.rojas@udgvirtual.udg.mx">CONTACTAR</a>
-      </div>
-    </div>
+<div class="card-group">
+    
+  <div class="card">
+    
+    <img src="assets/img/udgvirtual.png" class="img-fluid" alt="Responsive image">
+    
   </div>
+  
+  <div class="card">
+    <h5 class="text-center"> Licenciatura en Desarrollo de Sistemas Web </h5>
+          <h4 class="text-center"> Materia: </h4>
+          <p class="text-center">Conceptualización de Servicios en la Nube</p>
+          <h4 class="text-center"> Asesor:</h4>
+          <p class="text-center"> Oscar Gregorio Silva Mares </p>
+  </div> 
+  <div class="card">
+          <h4 class="text-center"> Producto Integrador </h4>
+          <p class="text-center">Aplicación web dinámica en un servicio de la nube </p>
+          <h4 class="text-center">Alumno:</h4>
+          <p class="text-center"> Julián Arnulfo Rojas Bernal </p>
+          <a href="mailto:julian.rojas@udgvirtual.udg.mx">CONTACTAR</a>
+  </div> 
+  </div>
+  
